Fix jumpy transition on fixed navbar

--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -72,7 +72,7 @@ div.toolbar {
 }
 
 ui-view> div.container {
-/*	margin-top: 200px;*/
+	margin-top: 200px; /* give space for the fixed header */
 }
 
 #content, #sidebar {
